--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,13 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
 					<useSystemClassLoader>false</useSystemClassLoader>
+					<systemPropertyVariables>
+						<hudson.slaves.NodeProvisioner.initialDelay>0</hudson.slaves.NodeProvisioner.initialDelay>
+						<hudson.slaves.NodeProvisioner.MARGIN>50</hudson.slaves.NodeProvisioner.MARGIN>
+						<hudson.slaves.NodeProvisioner.MARGIN0>0.85</hudson.slaves.NodeProvisioner.MARGIN0>
+						<!-- listen in this interface for connections from kubernetes pods -->
+						<connectorHost>${connectorHost}</connectorHost>
+					</systemPropertyVariables>
 				</configuration>
 			</plugin>
 		</plugins>
