--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
 			<plugin>
 				<groupId>net.ltgt.gwt.maven</groupId>
   				<artifactId>gwt-maven-plugin</artifactId>
+				<configuration>
+					<useSystemClassLoader>true</useSystemClassLoader>
+					<useManifestOnlyJar>false</useManifestOnlyJar>
+					<forkCount>1</forkCount>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
