--- a/pom.xml
+++ b/pom.xml
@@ -44,8 +44,17 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>net.ltgt.gwt.maven</groupId>
-  				<artifactId>gwt-maven-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+				<systemPropertyVariables>
+					<hudson.slaves.NodeProvisioner.initialDelay>0</hudson.slaves.NodeProvisioner.initialDelay>
+					<hudson.slaves.NodeProvisioner.MARGIN>50</hudson.slaves.NodeProvisioner.MARGIN>
+					<hudson.slaves.NodeProvisioner.MARGIN0>0.85</hudson.slaves.NodeProvisioner.MARGIN0>
+					<!-- listen in this interface for connections from kubernetes pods -->
+					<connectorHost>${connectorHost}</connectorHost>
+				</systemPropertyVariables>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
