--- a/demo-sample/values.yaml
+++ b/demo-sample/values.yaml
@@ -14,8 +14,9 @@ service:
   type: ClusterIP
   port: 8080
 
+## Enable ingress for minikube
 ingress:
-  enabled: true
+  enabled: false
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
