Update for minikube

--- a/demo-sample/values.yaml
+++ b/demo-sample/values.yaml
@@ -5,8 +5,8 @@
 replicaCount: 1
 
 image:
-  #repository: localhost:5000/sample-demo
-  repository: 172.30.1.1:5000/openshift/sample-demo
+  repository: localhost:5000/sample-demo
+  #repository: 172.30.1.1:5000/openshift/sample-demo
   tag: latest
   pullPolicy: IfNotPresent
 
@@ -16,7 +16,7 @@ service:
 
 ## Enable ingress for minikube
 ingress:
-  enabled: false
+  enabled: true
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
