--- a/jenkins/values.yml
+++ b/jenkins/values.yml
@@ -155,7 +155,7 @@ NetworkPolicy:
 
 ## Install Default RBAC roles and bindings
 rbac:
-  install: true
+  install: false
   serviceAccountName: default
   # RBAC api version (currently either v1beta1 or v1alpha1)
   apiVersion: v1beta1
